force-app/main/default/objects/Deployment_Environment__c/Deployment_Environment__c.object-meta.xml
<CustomObject>
    <label>Deployment_Environment</label>
    <nameField>
        <label>Deployment_Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment_Environment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>