force-app/main/default/objects/Deployment_Environment__c/fields/Auth_Type__c.field-meta.xml
<CustomField>
    <fullName>Auth_Type__c</fullName>
    <label>Auth_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFDX Auth URL</fullName>
            </value>
            <value>
                <fullName>Named Credential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>