force-app/main/default/objects/Deployment_Environment__c/fields/Is_Target_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Target_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is_Target_Enabled</label>
    <type>Checkbox</type>
</CustomField>