force-app/main/default/objects/Deployment_Environment__c/fields/Named_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Name__c</fullName>
    <label>Named_Credential_Name__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>