force-app/main/default/objects/Deployment_Environment__c/fields/Org_Alias__c.field-meta.xml
<CustomField>
    <fullName>Org_Alias__c</fullName>
    <label>Org_Alias</label>
    <length>100</length>
    <type>Text</type>
</CustomField>