force-app/main/default/objects/Deployment_Environment__c/fields/Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Type__c</fullName>
    <label>Org_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox,Production</fullName>
                <default>true</default>
                <label>Sandbox,Production</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>