force-app/main/default/objects/Deployment_Environment__c/fields/Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Org_URL__c</fullName>
    <label>Org_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>